Added taxing
